@@ -41,7 +41,8 @@
 #define DEFAULT_THREAD_POOL_SIZE 8
 #define DEFAULT_THREAD_POOL_ADJUST 0
 
-#define ADJUST_POOL_AT 25
+#define THREAD_SPAWN_AT 50
+#define THREAD_KILL_AT 15
 
 #define DEFAULT_PORT 8080
 #define DEFAULT_INTERFACE NULL
